version 0.49, unstable, July 5, 2009, svn 561

* Corrected weirdness in parse_conf.c Thanks to nobody/anonymous.

* Making of libcurl without support for SSH. Some platforms do not
   have libssh2 installed and it breaks our build.

* Post an XML-file as a body of POST request.
  An example of configuration file is conf-examples/post-xml.conf, where the XML-file itself is
  residing in the same configuration directory, namely conf-examples/some.xml
  The majic is now done by:
  REQUEST_TYPE=POST
  MULTIPART_FORM_DATA="file=@some.xml"

* Advanced to libevent-1.4.11-stable, which fixes several nastry epoll bugs.


version 0.48, unstable, April 9, 2009, svn 556

* Advanced to curl version 19.4 with several bugfixes in the area
  of multi-handle transfers, HTTPS, FTP/S and cookies handling.

* Work-around for the bug involving reading from file and using fgets,
   when gcc-4.3 is used with optimization. It is done by compiling the file
   parse_conf.c without optimization. Since the functionality of the file 
   matters only for reading configuration upon start, it is not supposed
   to impact performance.

* Added -x command-line option to let explicitly specify a proxy server. 
  By using the curl-loader option -x, curl-loader can be
  forced to set or unset a proxy independend of .curlrc and environment, making the
  proxy usage more transparent.
  Thanks to Frank <Frank_Migge@manulife.com> for this patch.

version 0.47, unstable, December 2, 2008, svn 551
	
* Fixed a POST-binary bug, where an extra check was preventing direct
   posting.
   Thanks to Alex <alex2048@gmail.com> and Gary Fitts <gary@intouchgroup.com>
	
* Fixed a bug on 64-bit ubuntoo, originating most probably from the
   wrong compiler optimization and running on an SMP machine, where 
   configuration files has failed to be loaded.
   Thanks to Sergei Shnaidman <sergei.shnaidman@qik.com> for 
   reporting, debugging and testing the fix.
